Implemented contacts endpoints
